# Agent

./: .gitignore
doc/: how-to-contribute.md
python/: README.md  agent.Dockerfile  docker-compose.yml
python/agent/: README.md  pyproject.toml
python/agent/core/knowledge/: __init__.py
python/agent/core/knowledge/auto/: __init__.py  model_auto.py
python/agent/core/utils/: __init__.py  generic_utils.py  logging.py
python/agent/server/: __init__.py  __main__.py  errors.py  server.py  settings.py
python/agent/server/handlers/: dataplane.py
python/agent/server/rest/: app.py  endpoints.py  errors.py  logging.py  responses.py  server.py
python/agent/server/schemas/: __init__.py  input_schemas.py  output_schemas.py
python/agent/server/utils/: dataplane_utils.py  logging.py
python/agent/tests/ipynb/: Langgraph Plan Execute.ipynb  Rework Langgraph Notebook.ipynb  message_graph.ipynb
python/agent/tests/ipynb/demo/: demo1.ipynb  demo2.ipynb  demo3-prompt-control-plan copy.ipynb  demo4-simple-plan-execute.ipynb  demo5-plan-execute.ipynb  demo6-Rework.ipynb  tool-without-function-calling.ipynb
python/agent/tests/ipynb/planning_agent/: LLM Compiler.ipynb  Langgraph Plan Execute.ipynb  Rework Langgraph Notebook.ipynb
